--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "steam-lightweight-openid",
+  "name": "steam-openid-fetch",
   "version": "1.0.0",
   "description": "Simple and lightweight Steam OpenID 2.0 client for Node.js",
   "main": "./build/index.js",
@@ -33,9 +33,6 @@
     "test": "jest --maxWorkers=4 --workerIdleMemoryLimit=0.2",
     "build": "tsc"
   },
-  "dependencies": {
-    "axios": "^1.4.0"
-  },
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/luxon": "^3.3.1",
@@ -43,6 +40,7 @@
     "jest": "^29.6.2",
     "luxon": "^3.4.0",
     "ts-jest": "^29.1.1",
+    "tslib": "^2.8.1",
     "typescript": "^5.1.6"
   }
 }
