include all types in published package

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "steam-openid-fetch",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Simple and lightweight Steam OpenID 2.0 client for Node.js",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
     "./build/index.js",
-    "./build/discover.js",
-    "./build/http.js",
-    "./build/openid.js",
-    "./build/xrds.js",
     "./build/index.d.ts",
+    "./build/discover.js",
+    "./build/discover.d.ts",
+    "./build/http.js",
+    "./build/http.d.ts",
+    "./build/openid.js",
+    "./build/openid.d.ts",
+    "./build/xrds.js",
+    "./build/xrds.d.ts",
     "./LICENSE",
     "./README.md",
     "./package.json"
